Turned off Flex-Wrap in Header - ficed the issue.

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     background-color: $tertiary;
 
     .header-img-container {
