--- a/styles/styles.css
+++ b/styles/styles.css
@@ -454,8 +454,6 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   background-color: #f8fbf3;
 }
 header .header-img-container {
